Tiny bug fix for home page featres on small screens.

--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -3570,10 +3570,6 @@
     max-width: 26em;
   }
 
-  .featured-projects dl {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
   .featured-projects dt {
     margin-top: 0;
   }
@@ -3650,7 +3646,7 @@
       margin: 0;
       position: absolute;
       left: 75%;
-      top: 0.19em;
+      top: 1.35em;
       text-align: left;
       width: 25%;
     }
@@ -3667,7 +3663,7 @@
     }
     .featured-projects .more {
       left: 75%;
-      top: 0.19em;
+      top: 1.35em;
       text-align: left;
       width: 25%;
     }
